<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="270dp"
    android:background="@drawable/dialog_shape">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/title_color"
        android:text="@string/notification_dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/notification_dialog_hint"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <Button
        android:id="@+id/bt_setting"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_selector"
        android:text="@string/setting"
        android:textAllCaps="false"
        android:textColor="@color/text_seletor"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint" />

    <TextView
        android:id="@+id/tv_not_allow"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_setting">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>