<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:background="@drawable/dialog_shape">

    <ImageView
        android:id="@+id/iv_lock"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:src="@mipmap/ic_lock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_access_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/access_required"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_permission_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_permission_hint"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_access_required"/>

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_pc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_permission_hint">

    </ImageView>

    <TextView
        android:id="@+id/tv_hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/will_not_share_private_data"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_permission_hint"/>

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_cd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint1">

    </ImageView>

    <TextView
        android:id="@+id/tv_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:text="@string/will_not_collect_private_data"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint1">
    </TextView>

    <Button
        android:id="@+id/bt_allow"
        android:layout_width="270dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint2"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:text="@string/allow_btn"
        android:textAllCaps="false"
        android:textColor="@color/text_seletor"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_allow"/>

</androidx.constraintlayout.widget.ConstraintLayout>