<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.GuideActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="110dp"
        android:text="@string/hi"
        android:textColor="@color/title_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        android:text="@string/guide_hint"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:layout_width="210dp"
        android:layout_height="280dp"
        android:layout_marginTop="230dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_robot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/skip"
        android:textColor="#999999"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--        />-->


    <Button
        android:id="@+id/bt_continue"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/btn_selector"
        android:text="@string/continue_btn"

        android:textColor="@color/text_seletor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/guide_permission_hint"
        android:textColor="@color/title_color"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_continue" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:src="@mipmap/ic_next"
        app:layout_constraintRight_toRightOf="@id/bt_continue"
        app:layout_constraintTop_toTopOf="@id/bt_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>