<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SpeakerCleanerActivity">

    <ImageView
        android:id="@+id/iv_speaker_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:src="@mipmap/ic_back" />
    <TextView
        android:text="@string/speaker_cleaner"
        android:textSize="20sp"
        android:textColor="@color/title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        >
    </TextView>

    <ImageView
        android:id="@+id/iv_hint"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_below="@id/iv_speaker_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_volume"/>
    <TextView
        android:id="@+id/tb_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/click_the_button_to_start_cleaning"
        android:textColor="@color/title_color"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/clean_dust_hint"
        android:textColor="@color/title_color"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/bt_clean_dust"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_selector"
        android:text="@string/clean_dust"
        android:textAllCaps="false"
        android:textColor="@color/text_seletor"
        android:textSize="17sp" />

    <FrameLayout
        android:id="@+id/fl_ad"
        android:visibility="gone"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </FrameLayout>

</RelativeLayout>