<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="340dp">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dialog_shape">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/stop"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/scanning_in_progress"
            android:textColor="@color/title_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/bt_continue"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@id/tv_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            android:textColor="@color/text_seletor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_below="@id/bt_continue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="@color/hint_color"
            android:textSize="16sp" />


    </RelativeLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_hint"/>


</RelativeLayout>