<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@mipmap/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
>


    <ImageView
        android:id="@+id/iv_about_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:src="@mipmap/ic_back" />
    <TextView
        android:text="@string/about"
        android:textSize="20sp"
        android:textColor="@color/title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        >
    </TextView>

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp">
    </ImageView>
    <TextView
        android:id="@+id/tv_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/tv_code"
        android:textSize="14sp"
        android:textColor="@color/hint_color"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/btn_nor"
        android:text="@string/agreement"/>
</RelativeLayout>