<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SplashActivity">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp">

        <ImageView
            android:layout_width="210dp"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_robot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:letterSpacing="0.05"
            android:text="@string/app_name"
            android:textColor="#292D39"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="280dp"
            android:layout_height="6dp"
            android:layout_centerVertical="true"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_layer" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/progressBar"
            android:gravity="center_vertical"
            android:text="0%"
            android:textColor="@color/title_color"
            android:textSize="14sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:textColor="@color/title_color"
        android:text="@string/agreement_prompt"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/btn_nor"
        android:text="@string/agreement"/>
    <Button
        android:id="@+id/bt_start"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@drawable/btn_selector"
        android:text="@string/strat_btn"
        android:textAllCaps="false"
        android:textColor="@color/text_seletor"
        android:textSize="17sp" />
</RelativeLayout>