<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activity.TransparentActivity">



    <Button
        android:id="@+id/bt_ok"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/btn_ok"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </Button>
    <RelativeLayout
        android:id="@+id/rl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_ok"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dialog_shape"
        android:layout_width="330dp"
        android:layout_height="60dp">
        <ImageView
            android:src="@mipmap/ic_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            >
        </ImageView>
        <TextView
            android:text="@string/app_name"
            android:layout_marginStart="60dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:textSize="18sp">
        </TextView>
        <ImageView
            android:src="@mipmap/ic_turnon"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="20dp">
        </ImageView>
    </RelativeLayout>
    <TextView
        android:text="@string/turn_it_on"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/bt_ok"
        app:layout_constraintBottom_toTopOf="@id/rl"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>